package views;

public abstract class PlayerView {

    protected abstract int getColumn();
    public abstract void dropToken();

}
